--- a/plan-your-trip.html
+++ b/plan-your-trip.html
@@ -2,6 +2,22 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7VMH5W3FET"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7VMH5W3FET');
+</script>
+<script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "u1z7soldc8");
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Plan your trip to Qatar Education Expo 2026. Find venue details for the Sheraton Grand Doha, visa info, and travel tips for this international education exhibition.">
@@ -30,7 +46,7 @@
         "@type": "Organization",
         "name": "Qatar Education Expo 2026",
         "url": "/index.html",
-        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png",
+        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp",
         "sameAs": [
           "https://twitter.com/qatarexpo2026",
           "https://linkedin.com/company/qatarexpo2026",
@@ -69,7 +85,7 @@
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="Qatar Education Expo 2026 Logo"></a>
+            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp" alt="Qatar Education Expo 2026 Logo"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -101,7 +117,6 @@
                          <ul class="dropdown-menu">
                             <li><a href="why-exhibit.html">Why Exhibit</a></li>
                             <li><a href="booth-features.html">Booth Features</a></li>
-                            <li><a href="floor-plan.html">Floor Plan</a></li>
                              <li><a href="booth-registration.html">Book Your Booth</a></li>
                         </ul>
                     </li>
@@ -127,145 +142,59 @@
         <section class="page-header">
             <div class="container">
                 <h1>Plan Your Trip</h1>
-                <p>Everything you need to know for a seamless visit to Doha for Qatar Education Expo 2026.</p>
+                <p>Essential information for your visit to Qatar Education Expo 2026.</p>
             </div>
         </section>
 
-        <!-- Venue Section -->
         <section id="venue-details">
             <div class="container">
-                <h2>The Venue: Sheraton Grand Doha Resort & Convention Hotel</h2>
-                <p class="subtitle">Experience the pinnacle of Qatari hospitality at our iconic event venue, located in the heart of the city.</p>
-                <div class="why-qatar-content">
-                    <div class="why-qatar-text">
-                         <ul>
-                            <li><strong>Central Location:</strong> Situated on the picturesque Corniche, offering stunning views of the Arabian Gulf and easy access to West Bay.</li>
-                            <li><strong>World-Class Facilities:</strong> State-of-the-art convention center, multiple dining options, and luxurious amenities.</li>
-                             <li><strong>Easy Accessibility:</strong> A short drive from Hamad International Airport and well-connected by local transport.</li>
+                 <h2>Event Venue: Sheraton Grand Doha</h2>
+                 <p class="subtitle">Experience the expo at one of Doha's most iconic landmarks.</p>
+                 <div class="lead-capture-grid">
+                    <div class="lead-capture-text">
+                        <h3>A Landmark of Qatari Hospitality</h3>
+                        <p>Located on the picturesque Corniche, the Sheraton Grand Doha Resort & Convention Hotel offers stunning sea views and is just a short drive from Hamad International Airport and the city center.</p>
+                        <ul class="lead-capture-features">
+                            <li><i class="fas fa-check-circle"></i><span><strong>Address:</strong> Al Corniche Street, Doha, Qatar</span></li>
+                            <li><i class="fas fa-check-circle"></i><span><strong>Dates:</strong> April 19–20, 2026</span></li>
+                            <li><i class="fas fa-check-circle"></i><span><strong>Timings:</strong> 8:00 AM - 5:00 PM Daily</span></li>
                         </ul>
-                         <div class="section-cta" style="text-align: left; margin-top: 2rem;">
-                             <a href="https://maps.app.goo.gl/JrmbC7h1VHwXUnFz7" class="btn btn-primary" target="_blank">Get Directions</a>
-                        </div>
+                        <a href="https://www.google.com/maps/dir//Sheraton+Grand+Doha+Resort+%26+Convention+Hotel/data=!4m8!4m7!1m0!1m5!1m1!1s0x3e45c4b0a439246d:0x5930644384e80806!2m2!1d51.540134!2d25.320499" class="btn btn-primary" target="_blank" rel="noopener noreferrer">Get Directions</a>
                     </div>
-                    <div class="why-qatar-image">
-                        <img src="https://www.griven.com/catalog/materials/project_image/qatar_sheraton_hotel/201501301138_sheraton_doha_11.jpg?height=600" alt="Sheraton Grand Doha Resort & Convention Hotel beautifully lit at night">
+                    <div class="lead-capture-image">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3607.493902978931!2d51.5375587150113!3d25.28731598385413!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e45c4b0a439246d%3A0x5930644384e80806!2sSheraton%20Grand%20Doha%20Resort%20%26%20Convention%20Hotel!5e0!3m2!1sen!2sqa!4v1628000000000!5m2!1sen!2sqa" width="100%" height="450" style="border:0; border-radius: 15px;" allowfullscreen="" loading="lazy"></iframe>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- Visa & Entry Section -->
         <section id="visa-entry" class="bg-surface">
             <div class="container">
-                <h2>Visa & Entry Requirements</h2>
-                <p class="subtitle">Qatar offers accessible visa options for visitors from around the world. Please review the requirements applicable to your nationality.</p>
+                <h2>Visa & Entry to Qatar</h2>
+                <p class="subtitle">Qatar offers visa-free entry to citizens of over 100 countries.</p>
                 <div class="content-grid">
                     <div class="content-card hayya-card">
-                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762080864/Untitled_design_-_2025-11-02T161534.918_idrjbh.webp" alt="Qatar Education Expo's owl mascot dressed as a pilot, providing information on visa and entry." class="visa-mascot">
+                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762076631/owl-tech_jep9f0.webp" alt="Qatar Education Expo's owl mascot dressed as a pilot, representing travel and visa information." class="visa-mascot">
                         <h3><i class="fas fa-passport"></i> Hayya Platform</h3>
-                        <p>For many nationalities, the Hayya platform is the main portal for entry visas. It offers a streamlined digital service for tourists and event attendees.</p>
-                        <a href="https://hayya.qa/" class="btn btn-primary" target="_blank">Visit Hayya Portal</a>
+                        <p>For nationalities requiring a visa, the process is streamlined through the official Hayya platform. We recommend applying well in advance of your travel dates.</p>
+                        <a href="https://hayya.qa/" class="btn btn-primary" target="_blank" rel="noopener noreferrer">Visit Hayya Platform</a>
                     </div>
                     <div class="content-card">
-                        <h3><i class="fas fa-globe"></i> Ministry of Interior Portal</h3>
-                        <p>Some nationalities may need to apply via the official Qatar Visa Portal. Check this resource for detailed eligibility and application rules.</p>
-                        <a href="https://portal.moi.gov.qa/wps/portal/MOIInternet/services/inquiries/visaservices" class="btn btn-primary" target="_blank">Visit MOI Portal</a>
-                    </div>
-                    <div class="content-card">
-                        <h3><i class="fas fa-info-circle"></i> General Advice</h3>
-                        <p>We strongly advise all international visitors to confirm the latest visa rules with their nearest Qatari embassy well in advance of their travel.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- NEW: Experience Doha Section -->
-        <section id="experience-doha">
-            <div class="container">
-                <h2>Experience Doha: Travel & Discover</h2>
-                <p class="subtitle">From world-class travel to unforgettable cultural experiences, your journey in Doha is seamless and inspiring.</p>
-
-                <div class="exposure-grid" style="margin-top: 3rem;">
-                    <!-- Arrive in Style -->
-                    <div class="exposure-item">
-                        <div class="exposure-image">
-                            <img src="https://i.pinimg.com/736x/f5/ce/b9/f5ceb92dadfc42f19f494fee609ddff5.jpg" alt="Interior of Hamad International Airport, Doha">
-                        </div>
-                        <div class="exposure-text">
-                            <h3><i class="fas fa-plane-departure"></i> Arrive in Style</h3>
-                            <p>Fly with the award-winning Qatar Airways, connecting over 170 destinations worldwide through the state-of-the-art Hamad International Airport (HIA).</p>
-                            <div class="section-cta" style="text-align: left; margin-top: 1.5rem;">
-                                <a href="https://www.qatarairways.com/en/homepage.html" class="btn btn-primary" target="_blank">Book Your Flight</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Seamless City Travel -->
-                    <div class="exposure-item">
-                         <div class="exposure-image">
-                            <img src="https://www.logisticsmiddleeast.com/cloud/2023/08/25/doha_metro1-1.jpg" alt="A modern Doha Metro train at a station">
-                        </div>
-                        <div class="exposure-text">
-                            <h3><i class="fas fa-subway"></i> Seamless City Travel</h3>
-                            <p>Navigate Doha with ease using the modern Doha Metro, one of the world's most advanced rail systems, or opt for the convenience of Karwa taxis and ride-sharing apps.</p>
-                             <div class="section-cta" style="text-align: left; margin-top: 1.5rem;">
-                                <a href="https://www.qr.com.qa/" class="btn btn-primary" target="_blank">Explore Transport</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Immerse in Culture -->
-                    <div class="exposure-item">
-                        <div class="exposure-image">
-                            <img src="https://images.unsplash.com/photo-1700901742651-6b353164caf3?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8cWF0YXJ8ZW58MHx8MHx8fDA%3D&fm=jpg&q=60&w=3000" alt="The bustling Souq Waqif market in Doha at night">
-                        </div>
-                        <div class="exposure-text">
-                            <h3><i class="fas fa-landmark"></i> Immerse in Culture</h3>
-                            <p>Extend your stay and discover Qatar's unique blend of culture, art, and adventure. Explore world-class institutions like the National Museum of Qatar or the vibrant, traditional Souq Waqif.</p>
-                             <div class="section-cta" style="text-align: left; margin-top: 1.5rem;">
-                                <a href="https://visitqatar.com/" class="btn btn-primary" target="_blank">Discover Attractions</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Book Your Stay -->
-                    <div class="exposure-item">
-                        <div class="exposure-image">
-                            <img src="https://images.pexels.com/photos/261102/pexels-photo-261102.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="A luxurious hotel resort pool area in Doha">
-                        </div>
-                        <div class="exposure-text">
-                            <h3><i class="fas fa-hotel"></i> Book Your Stay</h3>
-                            <p>From luxurious resorts to convenient city hotels, Doha offers a wide range of accommodation. Use trusted platforms like Booking.com to find the perfect stay near the Sheraton Grand Doha.</p>
-                            <div class="section-cta" style="text-align: left; margin-top: 1.5rem;">
-                                <a href="https://www.booking.com/city/qa/doha.html" class="btn btn-primary" target="_blank">Find Hotels</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Effortless City Rides -->
-                    <div class="exposure-item">
-                        <div class="exposure-image">
-                            <img src="https://media.istockphoto.com/id/519870714/photo/taxi.jpg?s=612x612&w=0&k=20&c=mzlqm5eisvu-B7hCyOK3LAsR4ugFTsHtC2kMWUmbA0Y=" alt="A person using a ride-sharing app like Uber on their phone">
-                        </div>
-                        <div class="exposure-text">
-                            <h3><i class="fas fa-taxi"></i> Effortless City Rides</h3>
-                            <p>Get around Doha quickly and conveniently with popular ride-sharing services like Uber. Simply download the app, book your ride, and explore the city at your own pace.</p>
-                            <div class="section-cta" style="text-align: left; margin-top: 1.5rem;">
-                                <a href="https://www.uber.com/global/en/cities/doha/" class="btn btn-primary" target="_blank">Book a Ride</a>
-                            </div>
-                        </div>
+                        <h3><i class="fas fa-plane-arrival"></i> Visa-Free Countries</h3>
+                        <p>Citizens of many countries in Europe, the Americas, and Asia can enter Qatar without a pre-arranged visa. Check the official list to see if your country is included.</p>
+                        <a href="https://visitqatar.com/intl-en/practical-info/visas" class="btn btn-primary" target="_blank" rel="noopener noreferrer">Check Visa-Free List</a>
                     </div>
                 </div>
             </div>
         </section>
 
     </main>
-
+    
     <footer class="main-footer">
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.png" alt="Qatar Education Expo 2026 Logo"></a>
+                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761223357/logo-white_1_pqcaph.webp" alt="Qatar Education Expo 2026 Logo"></a>
                     <p>The premier event connecting educational leaders, institutions, and innovators in the MENA region.</p>
                 </div>
                 <div class="footer-col">
