--- a/plan-your-trip.html
+++ b/plan-your-trip.html
@@ -2,6 +2,22 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7VMH5W3FET"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7VMH5W3FET');
+</script>
+<script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "u1z7soldc8");
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Plan your trip to Qatar Education Expo 2026. Find venue details for the Sheraton Grand Doha, visa info, and travel tips for this international education exhibition.">
@@ -30,7 +46,7 @@
         "@type": "Organization",
         "name": "Qatar Education Expo 2026",
         "url": "/index.html",
-        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png",
+        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp",
         "sameAs": [
           "https://twitter.com/qatarexpo2026",
           "https://linkedin.com/company/qatarexpo2026",
@@ -69,7 +85,7 @@
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="Qatar Education Expo 2026 Logo"></a>
+            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp" alt="Qatar Education Expo 2026 Logo"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -265,7 +281,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.png" alt="Qatar Education Expo 2026 Logo"></a>
+                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761223357/logo-white_1_pqcaph.webp" alt="Qatar Education Expo 2026 Logo"></a>
                     <p>The premier event connecting educational leaders, institutions, and innovators in the MENA region.</p>
                 </div>
                 <div class="footer-col">
