--- a/qatar-expo-hackathon.html
+++ b/qatar-expo-hackathon.html
@@ -1,15 +1,77 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7VMH5W3FET"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7VMH5W3FET');
+</script>
+<script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "u1z7soldc8");
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hackathon 2026 | QELE & Lovable Vibe Coding Challenge</title>
+    <meta name="description" content="Join the Vibe Coding Challenge at Qatar Education Expo 2026. A 24-hour hackathon for students to innovate the future of education with AI and design thinking.">
+    <title>Hackathon 2026 | Qatar Education Expo Coding Challenge</title>
+    <link rel="canonical" href="https://eduexpoqatar.com/qatar-expo-hackathon.html" />
+    <link rel="alternate" hreflang="en" href="https://eduexpoqatar.com/qatar-expo-hackathon.html" />
+    <link rel="alternate" hreflang="en-QA" href="https://eduexpoqatar.com/qatar-expo-hackathon.html" />
+    <link rel="alternate" hreflang="x-default" href="https://eduexpoqatar.com/qatar-expo-hackathon.html" />
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <script type="application/ld+json">
+    [
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Qatar Education Expo 2026",
+        "url": "/index.html",
+        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp",
+        "sameAs": [
+          "https://twitter.com/qatarexpo2026",
+          "https://linkedin.com/company/qatarexpo2026",
+          "https://instagram.com/qatarexpo2026"
+        ],
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+974-7444-9111",
+          "contactType": "Customer Service",
+          "email": "partnerships@eduexpoqatar.com"
+        }
+      },
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [{
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "/index.html"
+        },{
+          "@type": "ListItem",
+          "position": 2,
+          "name": "For Students",
+          "item": "/student-registration.html"
+        },{
+          "@type": "ListItem",
+          "position": 3,
+          "name": "Hackathon 2026"
+        }]
+      }
+    ]
+    </script>
     <style>
         .hackathon-partners {
             padding: 80px 0;
@@ -72,7 +134,7 @@
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="QELE 2026 Logo"></a>
+            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp" alt="Qatar Education Expo 2026 Logo"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -83,15 +145,16 @@
                     <li><a href="index.html" class="nav-link">Home</a></li>
                     <li><a href="about.html" class="nav-link">About Expo</a></li>
                     <li class="has-dropdown">
-                        <a href="#" class="nav-link">Visit <i class="fas fa-angle-down"></i></a>
+                        <a href="why-attend.html" class="nav-link">Visit <i class="fas fa-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="why-attend.html">Why Attend</a></li>
                             <li><a href="plan-your-trip.html">Plan Your Trip</a></li>
+                            <li><a href="school-group-registration.html">School Group Registration</a></li>
                             <li><a href="workshops.html">Agenda</a></li>
                         </ul>
                     </li>
                     <li class="has-dropdown">
-                        <a href="#" class="nav-link">For Students <i class="fas fa-angle-down"></i></a>
+                        <a href="student-registration.html" class="nav-link">For Students <i class="fas fa-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="student-registration.html">Student Registration</a></li>
                             <li><a href="career-counselling.html">Career Counselling</a></li>
@@ -103,6 +166,7 @@
                          <ul class="dropdown-menu">
                             <li><a href="why-exhibit.html">Why Exhibit</a></li>
                             <li><a href="booth-features.html">Booth Features</a></li>
+                            <li><a href="floor-plan.html">Floor Plan</a></li>
                              <li><a href="booth-registration.html">Book Your Booth</a></li>
                         </ul>
                     </li>
@@ -131,7 +195,7 @@
 
         <section id="hackathon-intro">
             <div class="container" style="max-width: 900px; text-align: center; position: relative;">
-                <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762163971/Untitled_design_-_2025-11-03T152918.441_c0m9ka.png" alt="QELE's owl mascot holding a coding laptop, representing the Hackathon event." class="hackathon-intro-mascot">
+                <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762163971/Untitled_design_-_2025-11-03T152918.441_c0m9ka.webp" alt="QELE's owl mascot holding a coding laptop, representing the Hackathon event." class="hackathon-intro-mascot">
                 <i class="fas fa-code" style="font-size: 3rem; background: var(--gradient); -webkit-background-clip: text; -webkit-text-fill-color: transparent; margin-bottom: 1rem;"></i>
                 <h2>Join a 24-Hour Innovation Hackathon</h2>
                 <p class="subtitle" style="font-size: 1.1rem;">In collaboration with lovable, the Qatar Education Leadership Expo 2026 proudly presents the Vibe Coding Challenge a 24-hour innovation hackathon designed to inspire the next generation of creative problem solvers. This challenge invites students across Qatar to reimagine the university experience of tomorrow using the power of AI, design thinking, and digital tools</p>
@@ -196,18 +260,18 @@
                 <div class="partners-grid">
                     <div class="partner-card">
                         <h4>Hosted By</h4>
-                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762105728/NB.hiloop.official.logo_1_wwcxzh.png" alt="Hi Loop Logo" class="hiloop-logo">
+                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762105728/NB.hiloop.official.logo_1_wwcxzh.webp" alt="Hi Loop Logo" class="hiloop-logo">
                         <p><strong>Hi Loop:</strong> A global community fostering learning-by-doing through coding clubs, workshops, and hackathons for young innovators to develop new skills and build impactful projects.</p>
                     </div>
                     <div class="partner-card">
                         <h4>An Initiative By</h4>
-                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762148595/Untitled_design_-_2025-11-03T111231.113_eejcdu.png" alt="Lovable Logo">
+                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762148595/Untitled_design_-_2025-11-03T111231.113_eejcdu.webp" alt="Lovable Logo">
                         <p><strong>Lovable:</strong> An AI-driven no-code development platform that empowers educators and learners to create interactive learning tools, apps and websites, making tech-creation accessible regardless of coding background.</p>
                     </div>
                     <div class="partner-card">
                         <h4>In Partnership With</h4>
-                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="Qatar Education Leadership Expo 2026 Logo">
-                        <p><strong>QELE 2026:</strong> The premier event connecting educational leaders, institutions, and innovators in the MENA region to shape the future of education.</p>
+                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp" alt="Qatar Education Expo 2026 Logo">
+                        <p><strong>Qatar Education Expo 2026:</strong> The premier event connecting educational leaders, institutions, and innovators in the MENA region to shape the future of education.</p>
                     </div>
                 </div>
             </div>
@@ -219,7 +283,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.png" alt="QELE 2026 Logo"></a>
+                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761223357/logo-white_1_pqcaph.webp" alt="Qatar Education Expo 2026 Logo"></a>
                     <p>The premier event connecting educational leaders, institutions, and innovators in the MENA region.</p>
                 </div>
                 <div class="footer-col">
@@ -264,7 +328,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 QELE. All Rights Reserved.</p>
+                <p>&copy; 2024 Qatar Education Expo. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
