--- a/workshops.html
+++ b/workshops.html
@@ -1,22 +1,83 @@
 
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7VMH5W3FET"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7VMH5W3FET');
+</script>
+<script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "u1z7soldc8");
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agenda - QELE 2026</title>
+    <meta name="description" content="Explore the full event agenda for Qatar Education Expo 2026. Discover keynote sessions, workshops, and panel discussions on AI in education, EdTech, and more.">
+    <title>Event Agenda & Workshops | Qatar Education Expo 2026</title>
+    <link rel="canonical" href="https://eduexpoqatar.com/workshops.html" />
+    <link rel="alternate" hreflang="en" href="https://eduexpoqatar.com/workshops.html" />
+    <link rel="alternate" hreflang="en-QA" href="https://eduexpoqatar.com/workshops.html" />
+    <link rel="alternate" hreflang="x-default" href="https://eduexpoqatar.com/workshops.html" />
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <script type="application/ld+json">
+    [
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Qatar Education Expo 2026",
+        "url": "/index.html",
+        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp",
+        "sameAs": [
+          "https://twitter.com/qatarexpo2026",
+          "https://linkedin.com/company/qatarexpo2026",
+          "https://instagram.com/qatarexpo2026"
+        ],
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+974-7444-9111",
+          "contactType": "Customer Service",
+          "email": "partnerships@eduexpoqatar.com"
+        }
+      },
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [{
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "/index.html"
+        },{
+          "@type": "ListItem",
+          "position": 2,
+          "name": "Visit",
+          "item": "/why-attend.html"
+        },{
+          "@type": "ListItem",
+          "position": 3,
+          "name": "Agenda"
+        }]
+      }
+    ]
+    </script>
 </head>
 <body>
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="QELE 2026 Logo"></a>
+            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp" alt="Qatar Education Expo 2026 Logo"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -27,15 +88,16 @@
                     <li><a href="index.html" class="nav-link">Home</a></li>
                     <li><a href="about.html" class="nav-link">About Expo</a></li>
                     <li class="has-dropdown">
-                        <a href="#" class="nav-link">Visit <i class="fas fa-angle-down"></i></a>
+                        <a href="why-attend.html" class="nav-link">Visit <i class="fas fa-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="why-attend.html">Why Attend</a></li>
                             <li><a href="plan-your-trip.html">Plan Your Trip</a></li>
+                            <li><a href="school-group-registration.html">School Group Registration</a></li>
                             <li><a href="workshops.html">Agenda</a></li>
                         </ul>
                     </li>
                     <li class="has-dropdown">
-                        <a href="#" class="nav-link">For Students <i class="fas fa-angle-down"></i></a>
+                        <a href="student-registration.html" class="nav-link">For Students <i class="fas fa-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="student-registration.html">Student Registration</a></li>
                             <li><a href="career-counselling.html">Career Counselling</a></li>
@@ -47,6 +109,7 @@
                          <ul class="dropdown-menu">
                             <li><a href="why-exhibit.html">Why Exhibit</a></li>
                             <li><a href="booth-features.html">Booth Features</a></li>
+                            <li><a href="floor-plan.html">Floor Plan</a></li>
                              <li><a href="booth-registration.html">Book Your Booth</a></li>
                         </ul>
                     </li>
@@ -210,7 +273,7 @@
                     <div class="content-card"><h3><i class="fas fa-user-tie"></i>Leadership Lounge – The Boardroom of Education</h3></div>
                     <div class="content-card"><h3><i class="fas fa-flask"></i>Student Innovation Fair / Showcase</h3></div>
                     <div class="content-card admission-zone-card">
-                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761916444/Blue_Bold_Office_Idea_Logo_50_x_50_px_29_dru4pr.png" alt="QELE Mascot" class="agenda-mascot">
+                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761916444/Blue_Bold_Office_Idea_Logo_50_x_50_px_29_dru4pr.webp" alt="Qatar Education Expo Mascot" class="agenda-mascot">
                         <h3><i class="fas fa-graduation-cap"></i>Career &amp; University Admission Zone</h3>
                     </div>
                     <div class="content-card"><h3><i class="fas fa-file-invoice"></i>Recruitment & CV Booth</h3></div>
@@ -232,7 +295,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.png" alt="QELE 2026 Logo"></a>
+                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761223357/logo-white_1_pqcaph.webp" alt="Qatar Education Expo 2026 Logo"></a>
                     <p>The premier event connecting educational leaders, institutions, and innovators in the MENA region.</p>
                 </div>
                 <div class="footer-col">
@@ -277,7 +340,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 QELE. All Rights Reserved.</p>
+                <p>&copy; 2024 Qatar Education Expo. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
