--- a/about.html
+++ b/about.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
@@ -15,7 +14,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Discover why Qatar Education Expo is the leading Gulf education exhibition and international university fair. Learn about opportunities to study abroad in the Middle East (study in UK, study in Canada) and connect with the thriving GCC education market at this premier student recruitment fair.">
     <title>About Qatar's Premier Education Expo | Study Abroad Middle East | Gulf Education Exhibition</title>
+    
     <link rel="canonical" href="https://eduexpoqatar.com/about.html" />
+    <link rel="alternate" hreflang="ar" href="https://eduexpoqatar.com/about-ar.html" />
     <link rel="alternate" hreflang="en" href="https://eduexpoqatar.com/about.html" />
     <link rel="alternate" hreflang="en-QA" href="https://eduexpoqatar.com/about.html" />
     <link rel="alternate" hreflang="en-SA" href="https://eduexpoqatar.com/about.html" />
@@ -27,6 +28,7 @@
     <link rel="alternate" hreflang="en-CA" href="https://eduexpoqatar.com/about.html" />
     <link rel="alternate" hreflang="en-US" href="https://eduexpoqatar.com/about.html" />
     <link rel="alternate" hreflang="x-default" href="https://eduexpoqatar.com/about.html" />
+
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -129,6 +131,9 @@
             <div class="header-ctas">
                 <a href="booth-registration.html" class="btn btn-primary btn-sm">Book a Booth</a>
                 <a href="sponsorship-registration.html" class="btn btn-primary btn-sm">Sponsor Now</a>
+                <div class="lang-switcher">
+                    <a href="about-ar.html" hreflang="ar" aria-label="Switch to Arabic">العربية</a>
+                </div>
             </div>
         </div>
     </header>
@@ -136,7 +141,7 @@
     <main>
         <section class="page-header">
             <div class="container">
-                <h1>$100 Billion Education Market on the Rise</h1>
+                <h1>Qatar's Premier Education Expo & International University Fair</h1>
                 <p>Position your institution at the forefront of a rapidly growing, high-demand region.</p>
             </div>
         </section>
@@ -184,7 +189,10 @@
                             </ul>
                         </div>
                         <div class="why-qatar-image">
-                            <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761513137/1566019-2960x1920-desktop-hd-doha-qatar-background-photo_zxpe8d.webp" alt="Stunning modern skyline of Doha, Qatar at dusk.">
+                            <picture>
+                                <source media="(max-width: 768px)" srcset="https://res.cloudinary.com/dj3vhocuf/image/upload/w_800,c_fill,ar_4:3,g_auto,q_auto,f_auto/v1761513137/1566019-2960x1920-desktop-hd-doha-qatar-background-photo_zxpe8d.webp">
+                                <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/w_1200,q_auto,f_auto/v1761513137/1566019-2960x1920-desktop-hd-doha-qatar-background-photo_zxpe8d.webp" alt="Stunning modern skyline of Doha, Qatar at dusk." loading="lazy" width="1200" height="778">
+                            </picture>
                         </div>
                     </div>
                 </div>
@@ -197,7 +205,7 @@
             <div class="footer-grid">
                 <div class="footer-col">
                     <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761223357/logo-white_1_pqcaph.webp" alt="Qatar Education Expo 2026 Logo"></a>
-    <p>The premier event connecting educational leaders, institutions, and innovators in the MENA region.</p>
+                    <p>The premier event connecting educational leaders, institutions, and innovators in the MENA region.</p>
                 </div>
                 <div class="footer-col">
                     <h3>Explore</h3>
@@ -316,7 +324,7 @@
         <a href="speaker-registration.html" class="mobile-cta-btn"><i class="fas fa-microphone-alt"></i><span>Speaker</span></a>
     </div>
 
-    <script src="https://unpkg.com/@panzoom/panzoom@4.5.1/dist/panzoom.min.js"></script>
+    
     <script type="module" src="index.tsx"></script>
 </body>
 </html>
