--- a/qatar-expo-hackathon.html
+++ b/qatar-expo-hackathon.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
@@ -200,7 +201,36 @@
                 <i class="fas fa-code" style="font-size: 3rem; background: var(--gradient); -webkit-background-clip: text; -webkit-text-fill-color: transparent; margin-bottom: 1rem;"></i>
                 <h2>Join a 24-Hour Innovation Hackathon</h2>
                 <p class="subtitle" style="font-size: 1.1rem;">In collaboration with lovable, the Qatar Education Leadership Expo 2026 proudly presents the Vibe Coding Challenge a 24-hour innovation hackathon designed to inspire the next generation of creative problem solvers. This challenge invites students across Qatar to reimagine the university experience of tomorrow using the power of AI, design thinking, and digital tools</p>
-                <a href="contact.html" class="btn btn-primary">Register to Participate</a>
+                <a href="student-registration.html" class="btn btn-primary">Register to Participate</a>
+            </div>
+        </section>
+
+        <section id="why-participate" class="bg-surface">
+            <div class="container">
+                <h2>Why You Should Participate</h2>
+                <p class="subtitle">Gain invaluable skills, network with experts, and make a real-world impact.</p>
+                <div class="benefits-grid">
+                    <div class="benefit-card">
+                        <i class="fas fa-code-branch"></i>
+                        <h3>Develop Future-Ready Skills</h3>
+                        <p>Learn AI, design thinking, and collaborative problem-solving from industry experts.</p>
+                    </div>
+                    <div class="benefit-card">
+                        <i class="fas fa-handshake"></i>
+                        <h3>Network with Leaders</h3>
+                        <p>Connect with mentors, university representatives, and tech industry leaders.</p>
+                    </div>
+                    <div class="benefit-card">
+                        <i class="fas fa-file-alt"></i>
+                        <h3>Boost Your University Profile</h3>
+                        <p>Add a standout project to your portfolio and university applications.</p>
+                    </div>
+                    <div class="benefit-card">
+                        <i class="fas fa-lightbulb"></i>
+                        <h3>Innovate for Impact</h3>
+                        <p>Use your creativity to develop innovative solutions for the future of education.</p>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -271,4 +301,142 @@
                         <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/h_80,q_auto,f_auto/v1762148595/Untitled_design_-_2025-11-03T111231.113_eejcdu.webp"
                              srcset="https://res.cloudinary.com/dj3vhocuf/image/upload/h_80,q_auto,f_auto/v1762148595/Untitled_design_-_2025-11-03T111231.113_eejcdu.webp 1x, https://res.cloudinary.com/dj3vhocuf/image/upload/h_160,q_auto,f_auto/v1762148595/Untitled_design_-_2025-11-03T111231.113_eejcdu.webp 2x"
                              alt="Lovable Logo" loading="lazy">
-                        <p><strong>Lovable:</strong> An AI-driven no-code development platform that empowers
+                        <p><strong>Lovable:</strong> An AI-driven no-code development platform that empowers educators and learners to build interactive educational tools, apps, and websites, making tech creation accessible regardless of coding background.</p>
+                    </div>
+                    <div class="partner-card">
+                        <h4>In Partnership With</h4>
+                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/h_80,q_auto,f_auto/v1761210698/logo500x250_i8opbv.webp"
+                             srcset="https://res.cloudinary.com/dj3vhocuf/image/upload/h_80,q_auto,f_auto/v1761210698/logo500x250_i8opbv.webp 1x, https://res.cloudinary.com/dj3vhocuf/image/upload/h_160,q_auto,f_auto/v1761210698/logo500x250_i8opbv.webp 2x"
+                             alt="Qatar Education Expo 2026 Logo" loading="lazy">
+                        <p><strong>Qatar Education Expo 2026:</strong> The premier event connecting educational leaders, institutions, and innovators in the MENA region to shape the future of learning.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    </main>
+    
+    <footer class="main-footer">
+        <div class="container">
+            <div class="footer-grid">
+                <div class="footer-col">
+                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761223357/logo-white_1_pqcaph.webp" alt="Qatar Education Expo 2026 Logo"></a>
+                    <p>The premier event connecting educational leaders, institutions, and innovators in the MENA region.</p>
+                </div>
+                <div class="footer-col">
+                    <h3>Explore</h3>
+                    <ul class="footer-links">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About Expo</a></li>
+                        <li><a href="why-exhibit.html">For Exhibitors</a></li>
+                        <li><a href="sponsorship-tiers.html">For Sponsors</a></li>
+                        <li><a href="student-registration.html">Student Registration</a></li>
+                    </ul>
+                </div>
+                 <div class="footer-col">
+                    <h3>Support</h3>
+                    <ul class="footer-links">
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="faq.html">FAQ</a></li>
+                        <li><a href="privacy.html">Privacy Policy</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h3>Connect With Us</h3>
+                    <ul class="footer-contact-info">
+                        <li>
+                            <i class="fas fa-map-marker-alt"></i>
+                            <span>Sheraton Grand Doha, Qatar</span>
+                        </li>
+                        <li>
+                            <i class="fas fa-envelope"></i>
+                            <a href="mailto:partnerships@eduexpoqatar.com">partnerships@eduexpoqatar.com</a>
+                        </li>
+                        <li>
+                            <i class="fas fa-phone"></i>
+                            <a href="tel:+97474449111">+974 7444 9111</a>
+                        </li>
+                    </ul>
+                    <div class="social-links">
+                        <a href="https://twitter.com/qatarexpo2026" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                        <a href="https://linkedin.com/company/qatarexpo2026" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://instagram.com/qatarexpo2026" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2024 Qatar Education Expo. All Rights Reserved.</p>
+            </div>
+        </div>
+    </footer>
+
+    <a href="https://wa.me/97474449111" class="whatsapp-fab" target="_blank" aria-label="Chat on WhatsApp">
+        <i class="fab fa-whatsapp"></i>
+    </a>
+
+    <div id="exit-intent-modal" class="modal-overlay">
+        <div class="modal-content exit-intent-content" role="dialog" aria-modal="true" aria-labelledby="exit-modal-title">
+            <button class="modal-close-btn" aria-label="Close">&times;</button>
+            <h3 id="exit-modal-title">Download The Deck Before You Leave!</h3>
+            <p>Get our official Exhibitor & Sponsorship Deck, including the floor plan and ROI details, sent straight to your inbox.</p>
+            <button id="open-deck-form-btn" class="btn btn-primary">Get The Deck</button>
+        </div>
+    </div>
+
+    <div id="deck-request-modal" class="modal-overlay">
+        <div class="modal-content" role="dialog" aria-modal="true" aria-labelledby="deck-modal-title">
+            <button class="modal-close-btn" aria-label="Close">&times;</button>
+            <div id="deck-form-container">
+                <h3 id="deck-modal-title">Get The Official Deck</h3>
+                <p>Please provide your details to receive the Exhibitor & Sponsorship Deck instantly.</p>
+                <form id="deck-request-form" novalidate style="margin-top: 1.5rem;">
+                    <input type="hidden" name="form_source" value="Deck Request Popup">
+                    <div class="form-group">
+                        <label for="deck-form-name">Full Name *</label>
+                        <input type="text" id="deck-form-name" name="name" required>
+                        <div class="error-message"></div>
+                    </div>
+                    <div class="form-group">
+                        <label for="deck-form-email">Work Email *</label>
+                        <input type="email" id="deck-form-email" name="email" required>
+                        <div class="error-message"></div>
+                    </div>
+                     <div class="form-group">
+                        <label for="deck-form-phone">Mobile Number *</label>
+                        <input type="tel" id="deck-form-phone" name="phone" required>
+                        <div class="error-message"></div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="deck-form-designation">Designation *</label>
+                            <input type="text" id="deck-form-designation" name="designation" required>
+                            <div class="error-message"></div>
+                        </div>
+                        <div class="form-group">
+                            <label for="deck-form-organization">Organization *</label>
+                            <input type="text" id="deck-form-organization" name="organization" required>
+                            <div class="error-message"></div>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary" style="width: 100%;">Download Now</button>
+                </form>
+            </div>
+            <div id="deck-form-success" style="display: none; text-align: center;">
+                <i class="fas fa-check-circle" style="font-size: 3rem; color: #4db6ac; margin-bottom: 1rem;" aria-hidden="true"></i>
+                <h3>Thank You!</h3>
+                <p>Your download should start automatically. If it doesn't, please check your pop-up blocker or try again.</p>
+            </div>
+        </div>
+    </div>
+    
+    <div id="mobile-sticky-bar">
+        <a href="booth-registration.html" class="mobile-cta-btn"><i class="fas fa-chalkboard-user"></i><span>Exhibitor</span></a>
+        <a href="sponsorship-registration.html" class="mobile-cta-btn"><i class="fas fa-star"></i><span>Sponsor</span></a>
+        <a href="student-registration.html" class="mobile-cta-btn"><i class="fas fa-graduation-cap"></i><span>Student</span></a>
+        <a href="speaker-registration.html" class="mobile-cta-btn"><i class="fas fa-microphone-alt"></i><span>Speaker</span></a>
+    </div>
+
+    <script src="https://unpkg.com/@panzoom/panzoom@4.5.1/dist/panzoom.min.js"></script>
+    <script type="module" src="index.tsx"></script>
+</body>
+</html>
