--- a/career-counselling.html
+++ b/career-counselling.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
@@ -139,7 +140,7 @@
     </header>
 
     <main>
-        <section id="hero" style="background-image: url('https://images.pexels.com/photos/3184418/pexels-photo-3184418.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2&fm=webp'); padding: 80px 0;">
+        <section id="hero" class="counselling-hero">
             <div class="container hero-content">
                 <div class="hero-text">
                     <h1>Expert Guidance to Study Abroad</h1>
@@ -390,7 +391,7 @@
         <a href="speaker-registration.html" class="mobile-cta-btn"><i class="fas fa-microphone-alt"></i><span>Speaker</span></a>
     </div>
 
-    <script src="https://unpkg.com/@panzoom/panzoom@4.5.1/dist/panzoom.min.js"></script>
+    
     <script type="module" src="index.tsx"></script>
 </body>
 </html>
