--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 <div class="hero-text">
                     <h1>Join the Region's Most Impactful Education Expo</h1>
                     <p>
-                        <strong>>April 19–20, 2026 | Sheraton Grand Doha Resort & Convention Hotel</strong>
+                        <strong>April 19–20, 2026 | Sheraton Grand Doha Resort & Convention Hotel</strong>
                         <br>
                          Organized by Student Diwan, Qatar's leading EdTech platform
                     </p>
