--- a/about-ar.html
+++ b/about-ar.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
@@ -14,6 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="اكتشف لماذا يعد معرض قطر للتعليم المعرض التعليمي الرائد في الخليج ومعرض الجامعات الدولي. تعرف على فرص الدراسة في الخارج في الشرق الأوسط (الدراسة في المملكة المتحدة، الدراسة في كندا) وتواصل مع سوق التعليم المزدهر في دول مجلس التعاون الخليجي في هذا المعرض الرائد لاستقطاب الطلاب.">
     <title>حول معرض قطر التعليمي الرائد | الدراسة في الخارج الشرق الأوسط | معرض التعليم الخليجي</title>
+    <link rel="icon" href="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png" type="image/png">
     
     <link rel="canonical" href="https://eduexpoqatar.com/about-ar.html" />
     <link rel="alternate" hreflang="en" href="https://eduexpoqatar.com/about.html" />
@@ -313,7 +315,7 @@
         <a href="speaker-registration-ar.html" class="mobile-cta-btn"><i class="fas fa-microphone-alt"></i><span>متحدث</span></a>
     </div>
 
-    <script src="https://unpkg.com/@panzoom/panzoom@4.5.1/dist/panzoom.min.js"></script>
+    
     <script type="module" src="index.tsx"></script>
 </body>
 </html>
