--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Discover why Qatar Education Expo is the leading Gulf education exhibition and international university fair. Learn about opportunities to study abroad in the Middle East (study in UK, study in Canada) and connect with the thriving GCC education market at this premier student recruitment fair.">
     <title>About Qatar's Premier Education Expo | Study Abroad Middle East | Gulf Education Exhibition</title>
+    <link rel="icon" href="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png" type="image/png">
     
     <link rel="canonical" href="https://eduexpoqatar.com/about.html" />
     <link rel="alternate" hreflang="ar" href="https://eduexpoqatar.com/about-ar.html" />
@@ -114,7 +115,7 @@
                          <ul class="dropdown-menu">
                             <li><a href="why-exhibit.html">Why Exhibit</a></li>
                             <li><a href="booth-features.html">Booth Features</a></li>
-                             <li><a href="booth-registration.html">Book Your Booth</a></li>
+                             <li><a href href="booth-registration.html">Book Your Booth</a></li>
                         </ul>
                     </li>
                     <li class="has-dropdown">
@@ -132,7 +133,7 @@
                 <a href="booth-registration.html" class="btn btn-primary btn-sm">Book a Booth</a>
                 <a href="sponsorship-registration.html" class="btn btn-primary btn-sm">Sponsor Now</a>
                 <div class="lang-switcher">
-                    <a href="about-ar.html" hreflang="ar" aria-label="Switch to Arabic">العربية</a>
+                    <a href="about-ar.html" hreflang="ar" aria-label="Switch to Arabic"><span>العربية</span><img src="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.0.0/flags/4x3/qa.svg" alt="Qatar Flag" class="lang-flag"></a>
                 </div>
             </div>
         </div>
