--- a/booth-registration.html
+++ b/booth-registration.html
@@ -16,8 +16,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Book your exhibitor booth for Qatar Education Expo 2026, the premier university expo in the GCC. Secure your space at MENA's leading student recruitment fair and connect with students, parents, and industry leaders.">
     <title>Book Your Booth | Exhibitor Registration | Qatar Education Expo 2026</title>
+    <link rel="icon" href="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png" type="image/png">
     <link rel="canonical" href="https://eduexpoqatar.com/booth-registration.html" />
     <link rel="alternate" hreflang="en" href="https://eduexpoqatar.com/booth-registration.html" />
+    <link rel="alternate" hreflang="ar" href="https://eduexpoqatar.com/booth-registration-ar.html" />
     <link rel="alternate" hreflang="en-QA" href="https://eduexpoqatar.com/booth-registration.html" />
     <link rel="alternate" hreflang="en-SA" href="https://eduexpoqatar.com/booth-registration.html" />
     <link rel="alternate" hreflang="en-AE" href="https://eduexpoqatar.com/booth-registration.html" />
@@ -135,6 +137,9 @@
             <div class="header-ctas">
                 <a href="booth-registration.html" class="btn btn-primary btn-sm">Book a Booth</a>
                 <a href="sponsorship-registration.html" class="btn btn-primary btn-sm">Sponsor Now</a>
+                <div class="lang-switcher">
+                    <a href="booth-registration-ar.html" hreflang="ar" aria-label="Switch to Arabic"><span>العربية</span><img src="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.0.0/flags/4x3/qa.svg" alt="Qatar Flag" class="lang-flag"></a>
+                </div>
             </div>
         </div>
     </header>
